--- a/hien_thi_cac_so_nguyen_to_dau_tien_tu_lam_OK-NÊN XEM LẠI.html
+++ b/hien_thi_cac_so_nguyen_to_dau_tien_tu_lam_OK-NÊN XEM LẠI.html
@@ -14,7 +14,8 @@
             continue;
         }else{
             for( let j=2;j<i;j++){
-                if(i%j==0){
+                let isEven=i%j==0;
+                if(isEven){
                     check=false;
                     break;
                 }
